@@ -2,6 +2,8 @@ CHANGES IN FLTK 1.1.7
 
 	- Documentation fixes (STR #648, STR #692, STR #730, STR
 	  #744, STR #745)
+	- Multiple screen support didn't work on Windows NT and
+	  95 (STR #821)
 	- Fl_Scrollbar didn't compute the correct knob size when
 	  using the "nice" types (STR #845)
 	- fl_draw() would segfault on WIN32 if no font was set;
